objects/Set_List__c.object
<CustomObject>
    <description>Song Set List for a Show</description>
    <fields>
        <fullName>Length_Hours__c</fullName>
        <description>Length of the set list hours portion</description>
        <inlineHelpText>Length of the set list hours portion</inlineHelpText>
        <label>Length Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Minutes__c</fullName>
        <description>Length of the set list minutes portion</description>
        <inlineHelpText>Length of the set list minutes portion</inlineHelpText>
        <label>Length Minutes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Seconds__c</fullName>
        <description>Length of the set list seconds portion</description>
        <inlineHelpText>Length of the set list seconds portion</inlineHelpText>
        <label>Length Seconds</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <description>The show the set list is for</description>
        <inlineHelpText>The show the set list is for</inlineHelpText>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Set Lists</relationshipLabel>
        <relationshipName>Set_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Set List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Set List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Set Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>